# Lumenpulse-web

./: CI_STATUS.md  REENTRANCY_AUDIT.md  pnpm-lock.yaml
.github/workflows/: backend.yml  data-processing.yml  onchain.yml
apps/backend/: .env.example  .gitignore  PORTFOLIO_SNAPSHOT_IMPLEMENTATION.md  SHARED_ACCESS_CONTROL_IMPLEMENTATION.md  package-lock.json  package.json
apps/data-processing/: .env.example  requirements.txt
apps/mobile/: CONTRIBUTOR_README.md  app.json  eslint.config.mjs  package-lock.json  package.json  (+1 more)
apps/onchain/contracts/matching_pool/: Cargo.toml
apps/onchain/contracts/matching_pool/src/: errors.rs  lib.rs  test.rs
apps/onchain/contracts/matching_pool/test_snapshots/test/: test_full_distribution_flow.1.json  test_fund_pool.1.json
apps/onchain/contracts/vesting-wallet/: Cargo.toml
apps/onchain/contracts/vesting-wallet/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  vault_interface.rs
apps/onchain/contracts/vesting-wallet/test_snapshots/test/: test_claim_before_start_time.1.json  test_claim_full_vesting.1.json  test_claim_multiple_times.1.json  test_claim_partial_vesting.1.json  test_claim_unauthorized.1.json  test_create_vesting.1.json  test_get_available_amount_linear_calculation.1.json  test_get_claimable_consistency_with_claim.1.json  test_get_claimable_view_method.1.json  test_multiple_beneficiaries.1.json  test_ttl_extended_after_read_write.1.json  test_update_vesting.1.json  test_vesting_entry_accessible_after_ledger_advance.1.json  test_vesting_entry_removed_after_full_claim.1.json
document/: review-playbook.md
(+218 files in other folders)
